partial GRPC working implementation
